src/objects/Case__c.object
<CustomObject><fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SiteDomain__c</fullName>
        <label>SiteDomain</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>icon__c</fullName>
        <label>icon</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>This is how record type will be assigned to the export community users</description><enableFeeds>false</enableFeeds><label>Case Record Types</label><visibility>Public</visibility></CustomObject>